@@ -62,18 +62,15 @@ import org.slf4j.LoggerFactory;
 public class ExpressionBuilder extends DefaultBuilder {
     public static final Logger LOGGER = LoggerFactory.getLogger(ExpressionBuilder.class);
 
-    public static final String NO_HEAP_EXPRESSION_BEFORE_AT_EXCEPTION_MESSAGE =
-        "Expecting select term before '@', not: ";
-
     /**
      * The current abbreviation used for resolving "@name" terms.
      */
-    private AbbrevMap abbrevMap;
+    private @Nullable AbbrevMap abbrevMap;
 
     /**
      * Altlast.
      */
-    private JTerm quantifiedArrayGuard;
+    private @Nullable JTerm quantifiedArrayGuard;
 
     /**
      * A list of terms, that are marked for having an already set heap.
@@ -181,7 +178,7 @@ public class ExpressionBuilder extends DefaultBuilder {
     @Override
     public JTerm visitParallel_term(KeYParser.Parallel_termContext ctx) {
         List<JTerm> t = mapOf(ctx.elementary_update_term());
-        JTerm a = t.get(0);
+        JTerm a = t.getFirst();
         for (int i = 1; i < t.size(); i++) {
             a = getTermFactory().createTerm(UpdateJunctor.PARALLEL_UPDATE, a, t.get(i));
         }
@@ -190,12 +187,12 @@ public class ExpressionBuilder extends DefaultBuilder {
 
     @Override
     public JTerm visitTermEOF(KeYParser.TermEOFContext ctx) {
-        return accept(ctx.term());
+        return Objects.requireNonNull(accept(ctx.term()));
     }
 
     @Override
     public JTerm visitElementary_update_term(KeYParser.Elementary_update_termContext ctx) {
-        JTerm a = accept(ctx.a);
+        JTerm a = Objects.requireNonNull(accept(ctx.a));
         JTerm b = accept(ctx.b);
         if (b != null) {
             return updateOrigin(getServices().getTermBuilder().elementary(a, b), ctx, services);
@@ -205,7 +202,7 @@ public class ExpressionBuilder extends DefaultBuilder {
 
     @Override
     public JTerm visitEquivalence_term(KeYParser.Equivalence_termContext ctx) {
-        JTerm a = accept(ctx.a);
+        JTerm a = Objects.requireNonNull(accept(ctx.a));
         if (ctx.b.isEmpty()) {
             return a;
         }
@@ -220,7 +217,7 @@ public class ExpressionBuilder extends DefaultBuilder {
     }
 
     private JTerm binaryTerm(ParserRuleContext ctx, Operator operator,
-            JTerm left, JTerm right) {
+            JTerm left, @Nullable JTerm right) {
         if (right == null) {
             return updateOrigin(left, ctx, services);
         }
@@ -231,14 +228,14 @@ public class ExpressionBuilder extends DefaultBuilder {
 
     @Override
     public JTerm visitImplication_term(KeYParser.Implication_termContext ctx) {
-        JTerm termL = accept(ctx.a);
+        JTerm termL = Objects.requireNonNull(accept(ctx.a));
         JTerm termR = accept(ctx.b);
         return binaryTerm(ctx, Junctor.IMP, termL, termR);
     }
 
     @Override
     public JTerm visitDisjunction_term(KeYParser.Disjunction_termContext ctx) {
-        JTerm t = accept(ctx.a);
+        JTerm t = Objects.requireNonNull(accept(ctx.a));
         for (KeYParser.Conjunction_termContext c : ctx.b) {
             t = binaryTerm(ctx, Junctor.OR, t, accept(c));
         }
@@ -247,7 +244,7 @@ public class ExpressionBuilder extends DefaultBuilder {
 
     @Override
     public JTerm visitConjunction_term(KeYParser.Conjunction_termContext ctx) {
-        JTerm t = accept(ctx.a);
+        JTerm t = Objects.requireNonNull(accept(ctx.a));
         for (KeYParser.Term60Context c : ctx.b) {
             t = binaryTerm(ctx, Junctor.AND, t, accept(c));
         }
@@ -258,8 +255,7 @@ public class ExpressionBuilder extends DefaultBuilder {
 
     @Override
     public Object visitUnary_minus_term(KeYParser.Unary_minus_termContext ctx) {
-        JTerm result = accept(ctx.sub);
-        assert result != null;
+        JTerm result = Objects.requireNonNull(accept(ctx.sub));
         if (ctx.MINUS() != null) {
             Function Z = functions().lookup("Z");
             if (result.op() == Z) {
@@ -303,7 +299,7 @@ public class ExpressionBuilder extends DefaultBuilder {
 
     @Override
     public JTerm visitEquality_term(KeYParser.Equality_termContext ctx) {
-        JTerm termL = accept(ctx.a);
+        JTerm termL = Objects.requireNonNull(accept(ctx.a));
         JTerm termR = accept(ctx.b);
         JTerm eq = binaryTerm(ctx, Equality.EQUALS, termL, termR);
         if (ctx.NOT_EQUALS() != null) {
@@ -559,7 +555,7 @@ public class ExpressionBuilder extends DefaultBuilder {
     }
 
     @Override
-    public Object visitTermorseq(KeYParser.TermorseqContext ctx) {
+    public @Nullable Object visitTermorseq(KeYParser.TermorseqContext ctx) {
         JTerm head = accept(ctx.head);
         Sequent s = accept(ctx.s);
         ImmutableList<SequentFormula> ss = accept(ctx.ss);
@@ -833,7 +829,7 @@ public class ExpressionBuilder extends DefaultBuilder {
      * pm.name().toString().equals(kjt.getFullName() + "::" + mn)) { List<Term> arguments =
      * mapOf(suffix.attribute_or_query_suffix().result.args.argument()); Term[] args =
      * arguments.toArray(new Term[0]); return getJavaInfo().getStaticProgramMethodTerm(mn, args,
-     * kjt.getFullName()); } } } assert false; return null; }
+     * kjt.getFullName()); } } } throw new RuntimeException("Not Implemented"); }
      */
 
     @Override
